Matroska audio support (mka, mkv without video stream) #39186

Closed
opened 2014-03-14 16:44:32 +01:00 by Jonathan Vollebregt · 14 comments

System Information
Debian sid, GTX 680, nvidia-driver: 331.49-1

Blender Version
Package blender.deb: 2.69-4+b1
blender -v:

$ blender -v
Color management: using fallback mode for management
Blender 2.69 (sub 0)
        build date: 2014-02-20
        build time: 12:20:54
        build revision: unknown
        build platform: Linux
        build type: None
        build c flags:  -Wall -Wcast-align -Werror=declaration-after-statement -Werror=implicit-function-declaration -Werror=return-type -Wstrict-prototypes -Wmissing-prototypes -Wno-char-subscripts -Wno-unknown-pragmas -Wpointer-arith -Wunused-parameter -Wwrite-strings -Wlogical-op -Wundef -Winit-self -Wnonnull -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Wuninitialized -Wredundant-decls -Wno-error=unused-but-set-variable -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2  -fopenmp  -msse2  -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing
        build c++ flags:  -Wredundant-decls -Wall -Wno-invalid-offsetof -Wno-sign-compare -Wlogical-op -Winit-self -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Wuninitialized -Wundef -Wmissing-declarations -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2  -D__STDC_CONSTANT_MACROS -fopenmp  -msse2  -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing
        build link flags:  -pthread
        build system: CMake

Blender VSE opens mka files as images and promptly fails to display them:

IMB_ibImageFromMemory: unknown fileformat (/mnt/data/Videos/output/test.mka)

test.mka

Blender VSE fails to open mkv files without video streams:

not an anim: /mnt/data/Videos/output/test.mkv

As a result you can't store audio in matroska format at all

test.mkv

Bonus: mkv file with aac audio stream and no video segfaults blender on viewing the folder

test-segfault.mkv

**System Information** Debian sid, GTX 680, nvidia-driver: 331.49-1 **Blender Version** Package blender.deb: 2.69-4+b1 blender -v: ``` $ blender -v Color management: using fallback mode for management Blender 2.69 (sub 0) build date: 2014-02-20 build time: 12:20:54 build revision: unknown build platform: Linux build type: None build c flags: -Wall -Wcast-align -Werror=declaration-after-statement -Werror=implicit-function-declaration -Werror=return-type -Wstrict-prototypes -Wmissing-prototypes -Wno-char-subscripts -Wno-unknown-pragmas -Wpointer-arith -Wunused-parameter -Wwrite-strings -Wlogical-op -Wundef -Winit-self -Wnonnull -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Wuninitialized -Wredundant-decls -Wno-error=unused-but-set-variable -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2 -fopenmp -msse2 -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing build c++ flags: -Wredundant-decls -Wall -Wno-invalid-offsetof -Wno-sign-compare -Wlogical-op -Winit-self -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Wuninitialized -Wundef -Wmissing-declarations -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2 -D__STDC_CONSTANT_MACROS -fopenmp -msse2 -msse -pipe -fPIC -funsigned-char -fno-strict-aliasing build link flags: -pthread build system: CMake ``` Blender VSE opens mka files as images and promptly fails to display them: ``` IMB_ibImageFromMemory: unknown fileformat (/mnt/data/Videos/output/test.mka) ``` [test.mka](https://archive.blender.org/developer/F81132/test.mka) Blender VSE fails to open mkv files without video streams: ``` not an anim: /mnt/data/Videos/output/test.mkv ``` As a result you can't store audio in matroska format at all [test.mkv](https://archive.blender.org/developer/F81131/test.mkv) Bonus: mkv file with aac audio stream and no video segfaults blender on viewing the folder [test-segfault.mkv](https://archive.blender.org/developer/F81133/test-segfault.mkv)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jnvsor

Added subscriber: @jnvsor
Sergey Sharybin was assigned by Bastien Montagne 2014-03-15 11:53:24 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Can not reproduce the issue with the official builds from blender.org. The thing is: debian is actually using libav instead of ffmpeg and it might give issues in some cases. And 2.69 didn't actually support libav good enough. We've improved this support in 2.70 so new release should work fine for you. At least it works here with own build against libav-10.

Further, if the issue remains to you, please check builds from blender.org and if you can't reproduce the issue with them fire a bug report to debian bug tracer.

Can not reproduce the issue with the official builds from blender.org. The thing is: debian is actually using libav instead of ffmpeg and it might give issues in some cases. And 2.69 didn't actually support libav good enough. We've improved this support in 2.70 so new release should work fine for you. At least it works here with own build against libav-10. Further, if the issue remains to you, please check builds from blender.org and if you can't reproduce the issue with them fire a bug report to debian bug tracer.

Well, while I'm aware of libav's... issues... I doubt this particular problem is there: Here's the blender.org version with the same bug (Note the line "found bundled python: /home/j/.opt/blender-2.70-linux-glibc211-x86_64/2.70/python")

$ blender -d
Switching to fully guarded memory allocator.
Blender 2.70 (sub 0)
Build: 2014-03-19 05:42:45 Linux:64bit Release
argv[0] = blender
argv[1] = -d
connect failed: No such file or directory
read file /home/j/.config/blender/2.70/config/startup.blend
  Version 270 sub 0 date 1970-01-01 00:00 hash unknown

ordered
 OBCube
 OBLamp
 OBCamera
read file /home/j/.config/blender/2.70/config/userpref.blend
  Version 269 sub 0 date 1970-01-01 00:00 hash 
Read new prefs: /home/j/.config/blender/2.70/config/userpref.blend
found bundled python: /home/j/.opt/blender-2.70-linux-glibc211-x86_64/2.70/python
read file 
  Version 262 sub 3 date 1970-01-01 00:00 hash 
read file 
  Version 268 sub 5 date 1970-01-01 00:00 hash 
ED_undo_push: Add Image Strip
IMB_ibImageFromMemory: unknown fileformat (/home/j/Downloads/test.mka)

Here's an ldd, if it works for you the problem is bound to be somewhere in here

$ ldd blender
        linux-vdso.so.1 (0x00007fff10f8f000)
        librt.so.1 => /lib/x86_64-linux-gnu/librt.so.1 (0x00007f3bda20c000)
        libfreetype.so.6 => /usr/lib/x86_64-linux-gnu/libfreetype.so.6 (0x00007f3bd9f68000)
        libSDL-1.2.so.0 => /usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0 (0x00007f3bd9ccc000)
        libGL.so.1 => /usr/lib/x86_64-linux-gnu/libGL.so.1 (0x00007f3bd9999000)
        libGLU.so.1 => /usr/lib/x86_64-linux-gnu/libGLU.so.1 (0x00007f3bd972b000)
        libX11.so.6 => /usr/lib/x86_64-linux-gnu/libX11.so.6 (0x00007f3bd93ef000)
        libXi.so.6 => /usr/lib/x86_64-linux-gnu/libXi.so.6 (0x00007f3bd91df000)
        libXxf86vm.so.1 => /usr/lib/x86_64-linux-gnu/libXxf86vm.so.1 (0x00007f3bd8fd9000)
        libutil.so.1 => /lib/x86_64-linux-gnu/libutil.so.1 (0x00007f3bd8dd5000)
        libdl.so.2 => /lib/x86_64-linux-gnu/libdl.so.2 (0x00007f3bd8bd1000)
        libpthread.so.0 => /lib/x86_64-linux-gnu/libpthread.so.0 (0x00007f3bd89b4000)
        libstdc++.so.6 => /usr/lib/x86_64-linux-gnu/libstdc++.so.6 (0x00007f3bd86af000)
        libm.so.6 => /lib/x86_64-linux-gnu/libm.so.6 (0x00007f3bd83ac000)
        libc.so.6 => /lib/x86_64-linux-gnu/libc.so.6 (0x00007f3bd8003000)
        /lib64/ld-linux-x86-64.so.2 (0x00007f3bda43e000)
        libgcc_s.so.1 => /lib/x86_64-linux-gnu/libgcc_s.so.1 (0x00007f3bd7dec000)
        libz.so.1 => /lib/x86_64-linux-gnu/libz.so.1 (0x00007f3bd7bd4000)
        libpng12.so.0 => /lib/x86_64-linux-gnu/libpng12.so.0 (0x00007f3bd79ad000)
        libasound.so.2 => /usr/lib/x86_64-linux-gnu/libasound.so.2 (0x00007f3bd76b5000)
        libpulse-simple.so.0 => /usr/lib/x86_64-linux-gnu/libpulse-simple.so.0 (0x00007f3bd74b0000)
        libpulse.so.0 => /usr/lib/x86_64-linux-gnu/libpulse.so.0 (0x00007f3bd7266000)
        libXext.so.6 => /usr/lib/x86_64-linux-gnu/libXext.so.6 (0x00007f3bd7053000)
        libdirectfb-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libdirectfb-1.2.so.9 (0x00007f3bd6dce000)
        libfusion-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libfusion-1.2.so.9 (0x00007f3bd6bc4000)
        libdirect-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libdirect-1.2.so.9 (0x00007f3bd69ab000)
        libcaca.so.0 => /usr/lib/x86_64-linux-gnu/libcaca.so.0 (0x00007f3bd66e0000)
        libts-0.0.so.0 => /usr/lib/x86_64-linux-gnu/libts-0.0.so.0 (0x00007f3bd64dd000)
        libnvidia-tls.so.331.49 => /usr/lib/x86_64-linux-gnu/tls/libnvidia-tls.so.331.49 (0x00007f3bd62d9000)                                                                                             
        libnvidia-glcore.so.331.49 => /usr/lib/x86_64-linux-gnu/libnvidia-glcore.so.331.49 (0x00007f3bd3aca000)                                                                                           
        libxcb.so.1 => /usr/lib/x86_64-linux-gnu/libxcb.so.1 (0x00007f3bd38ab000)                    
        libpulsecommon-4.0.so => /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-4.0.so (0x00007f3bd363e000)                                                                                          
        libcap.so.2 => /lib/x86_64-linux-gnu/libcap.so.2 (0x00007f3bd343a000)                        
        libjson-c.so.2 => /lib/x86_64-linux-gnu/libjson-c.so.2 (0x00007f3bd322e000)                  
        libdbus-1.so.3 => /lib/x86_64-linux-gnu/libdbus-1.so.3 (0x00007f3bd2fe8000)                  
        libslang.so.2 => /lib/x86_64-linux-gnu/libslang.so.2 (0x00007f3bd2c53000)                    
        libncursesw.so.5 => /lib/x86_64-linux-gnu/libncursesw.so.5 (0x00007f3bd2a1e000)              
        libtinfo.so.5 => /lib/x86_64-linux-gnu/libtinfo.so.5 (0x00007f3bd27f4000)                    
        libXau.so.6 => /usr/lib/x86_64-linux-gnu/libXau.so.6 (0x00007f3bd25ef000)
        libXdmcp.so.6 => /usr/lib/x86_64-linux-gnu/libXdmcp.so.6 (0x00007f3bd23ea000)
        libX11-xcb.so.1 => /usr/lib/x86_64-linux-gnu/libX11-xcb.so.1 (0x00007f3bd21e8000)
        libICE.so.6 => /usr/lib/x86_64-linux-gnu/libICE.so.6 (0x00007f3bd1fcc000)
        libSM.so.6 => /usr/lib/x86_64-linux-gnu/libSM.so.6 (0x00007f3bd1dc5000)
        libXtst.so.6 => /usr/lib/x86_64-linux-gnu/libXtst.so.6 (0x00007f3bd1bbf000)
        libwrap.so.0 => /lib/x86_64-linux-gnu/libwrap.so.0 (0x00007f3bd19b3000)
        libsndfile.so.1 => /usr/lib/x86_64-linux-gnu/libsndfile.so.1 (0x00007f3bd174b000)
        libasyncns.so.0 => /usr/lib/x86_64-linux-gnu/libasyncns.so.0 (0x00007f3bd1545000)
        libattr.so.1 => /lib/x86_64-linux-gnu/libattr.so.1 (0x00007f3bd133f000)
        libuuid.so.1 => /lib/x86_64-linux-gnu/libuuid.so.1 (0x00007f3bd113a000)
        libnsl.so.1 => /lib/x86_64-linux-gnu/libnsl.so.1 (0x00007f3bd0f21000)
        libFLAC.so.8 => /usr/lib/x86_64-linux-gnu/libFLAC.so.8 (0x00007f3bd0cef000)
        libvorbisenc.so.2 => /usr/lib/x86_64-linux-gnu/libvorbisenc.so.2 (0x00007f3bd0820000)
        libvorbis.so.0 => /usr/lib/x86_64-linux-gnu/libvorbis.so.0 (0x00007f3bd05f2000)
        libogg.so.0 => /usr/lib/x86_64-linux-gnu/libogg.so.0 (0x00007f3bd03eb000)
        libresolv.so.2 => /lib/x86_64-linux-gnu/libresolv.so.2 (0x00007f3bd01d4000)
Well, while I'm aware of libav's... issues... I doubt this particular problem is there: Here's the blender.org version with the same bug (Note the line "found bundled python: /home/j/.opt/blender-2.70-linux-glibc211-x86_64/2.70/python") ``` $ blender -d Switching to fully guarded memory allocator. Blender 2.70 (sub 0) Build: 2014-03-19 05:42:45 Linux:64bit Release argv[0] = blender argv[1] = -d connect failed: No such file or directory read file /home/j/.config/blender/2.70/config/startup.blend Version 270 sub 0 date 1970-01-01 00:00 hash unknown ordered OBCube OBLamp OBCamera read file /home/j/.config/blender/2.70/config/userpref.blend Version 269 sub 0 date 1970-01-01 00:00 hash Read new prefs: /home/j/.config/blender/2.70/config/userpref.blend found bundled python: /home/j/.opt/blender-2.70-linux-glibc211-x86_64/2.70/python read file Version 262 sub 3 date 1970-01-01 00:00 hash read file Version 268 sub 5 date 1970-01-01 00:00 hash ED_undo_push: Add Image Strip IMB_ibImageFromMemory: unknown fileformat (/home/j/Downloads/test.mka) ``` Here's an ldd, if it works for you the problem is bound to be somewhere in here ``` $ ldd blender linux-vdso.so.1 (0x00007fff10f8f000) librt.so.1 => /lib/x86_64-linux-gnu/librt.so.1 (0x00007f3bda20c000) libfreetype.so.6 => /usr/lib/x86_64-linux-gnu/libfreetype.so.6 (0x00007f3bd9f68000) libSDL-1.2.so.0 => /usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0 (0x00007f3bd9ccc000) libGL.so.1 => /usr/lib/x86_64-linux-gnu/libGL.so.1 (0x00007f3bd9999000) libGLU.so.1 => /usr/lib/x86_64-linux-gnu/libGLU.so.1 (0x00007f3bd972b000) libX11.so.6 => /usr/lib/x86_64-linux-gnu/libX11.so.6 (0x00007f3bd93ef000) libXi.so.6 => /usr/lib/x86_64-linux-gnu/libXi.so.6 (0x00007f3bd91df000) libXxf86vm.so.1 => /usr/lib/x86_64-linux-gnu/libXxf86vm.so.1 (0x00007f3bd8fd9000) libutil.so.1 => /lib/x86_64-linux-gnu/libutil.so.1 (0x00007f3bd8dd5000) libdl.so.2 => /lib/x86_64-linux-gnu/libdl.so.2 (0x00007f3bd8bd1000) libpthread.so.0 => /lib/x86_64-linux-gnu/libpthread.so.0 (0x00007f3bd89b4000) libstdc++.so.6 => /usr/lib/x86_64-linux-gnu/libstdc++.so.6 (0x00007f3bd86af000) libm.so.6 => /lib/x86_64-linux-gnu/libm.so.6 (0x00007f3bd83ac000) libc.so.6 => /lib/x86_64-linux-gnu/libc.so.6 (0x00007f3bd8003000) /lib64/ld-linux-x86-64.so.2 (0x00007f3bda43e000) libgcc_s.so.1 => /lib/x86_64-linux-gnu/libgcc_s.so.1 (0x00007f3bd7dec000) libz.so.1 => /lib/x86_64-linux-gnu/libz.so.1 (0x00007f3bd7bd4000) libpng12.so.0 => /lib/x86_64-linux-gnu/libpng12.so.0 (0x00007f3bd79ad000) libasound.so.2 => /usr/lib/x86_64-linux-gnu/libasound.so.2 (0x00007f3bd76b5000) libpulse-simple.so.0 => /usr/lib/x86_64-linux-gnu/libpulse-simple.so.0 (0x00007f3bd74b0000) libpulse.so.0 => /usr/lib/x86_64-linux-gnu/libpulse.so.0 (0x00007f3bd7266000) libXext.so.6 => /usr/lib/x86_64-linux-gnu/libXext.so.6 (0x00007f3bd7053000) libdirectfb-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libdirectfb-1.2.so.9 (0x00007f3bd6dce000) libfusion-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libfusion-1.2.so.9 (0x00007f3bd6bc4000) libdirect-1.2.so.9 => /usr/lib/x86_64-linux-gnu/libdirect-1.2.so.9 (0x00007f3bd69ab000) libcaca.so.0 => /usr/lib/x86_64-linux-gnu/libcaca.so.0 (0x00007f3bd66e0000) libts-0.0.so.0 => /usr/lib/x86_64-linux-gnu/libts-0.0.so.0 (0x00007f3bd64dd000) libnvidia-tls.so.331.49 => /usr/lib/x86_64-linux-gnu/tls/libnvidia-tls.so.331.49 (0x00007f3bd62d9000) libnvidia-glcore.so.331.49 => /usr/lib/x86_64-linux-gnu/libnvidia-glcore.so.331.49 (0x00007f3bd3aca000) libxcb.so.1 => /usr/lib/x86_64-linux-gnu/libxcb.so.1 (0x00007f3bd38ab000) libpulsecommon-4.0.so => /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-4.0.so (0x00007f3bd363e000) libcap.so.2 => /lib/x86_64-linux-gnu/libcap.so.2 (0x00007f3bd343a000) libjson-c.so.2 => /lib/x86_64-linux-gnu/libjson-c.so.2 (0x00007f3bd322e000) libdbus-1.so.3 => /lib/x86_64-linux-gnu/libdbus-1.so.3 (0x00007f3bd2fe8000) libslang.so.2 => /lib/x86_64-linux-gnu/libslang.so.2 (0x00007f3bd2c53000) libncursesw.so.5 => /lib/x86_64-linux-gnu/libncursesw.so.5 (0x00007f3bd2a1e000) libtinfo.so.5 => /lib/x86_64-linux-gnu/libtinfo.so.5 (0x00007f3bd27f4000) libXau.so.6 => /usr/lib/x86_64-linux-gnu/libXau.so.6 (0x00007f3bd25ef000) libXdmcp.so.6 => /usr/lib/x86_64-linux-gnu/libXdmcp.so.6 (0x00007f3bd23ea000) libX11-xcb.so.1 => /usr/lib/x86_64-linux-gnu/libX11-xcb.so.1 (0x00007f3bd21e8000) libICE.so.6 => /usr/lib/x86_64-linux-gnu/libICE.so.6 (0x00007f3bd1fcc000) libSM.so.6 => /usr/lib/x86_64-linux-gnu/libSM.so.6 (0x00007f3bd1dc5000) libXtst.so.6 => /usr/lib/x86_64-linux-gnu/libXtst.so.6 (0x00007f3bd1bbf000) libwrap.so.0 => /lib/x86_64-linux-gnu/libwrap.so.0 (0x00007f3bd19b3000) libsndfile.so.1 => /usr/lib/x86_64-linux-gnu/libsndfile.so.1 (0x00007f3bd174b000) libasyncns.so.0 => /usr/lib/x86_64-linux-gnu/libasyncns.so.0 (0x00007f3bd1545000) libattr.so.1 => /lib/x86_64-linux-gnu/libattr.so.1 (0x00007f3bd133f000) libuuid.so.1 => /lib/x86_64-linux-gnu/libuuid.so.1 (0x00007f3bd113a000) libnsl.so.1 => /lib/x86_64-linux-gnu/libnsl.so.1 (0x00007f3bd0f21000) libFLAC.so.8 => /usr/lib/x86_64-linux-gnu/libFLAC.so.8 (0x00007f3bd0cef000) libvorbisenc.so.2 => /usr/lib/x86_64-linux-gnu/libvorbisenc.so.2 (0x00007f3bd0820000) libvorbis.so.0 => /usr/lib/x86_64-linux-gnu/libvorbis.so.0 (0x00007f3bd05f2000) libogg.so.0 => /usr/lib/x86_64-linux-gnu/libogg.so.0 (0x00007f3bd03eb000) libresolv.so.2 => /lib/x86_64-linux-gnu/libresolv.so.2 (0x00007f3bd01d4000) ```

How do you add the file to sequencer?

How do you add the file to sequencer?

Drag and drop from file browser pane to VSE pane

Edit: Clicking add audio and going to the folder it's automatically filtered out, but I can disable the filters and select it then it works. Looks like this only happens on drag and drop

Drag and drop from file browser pane to VSE pane Edit: Clicking add audio and going to the folder it's automatically filtered out, but I can disable the filters and select it then it works. Looks like this only happens on drag and drop

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Ah, this makes sense. I've been adding it via Add->Sound. Can confirm issue with drag-n-drop.

Ah, this makes sense. I've been adding it via Add->Sound. Can confirm issue with drag-n-drop.

This issue was referenced by blender/blender-addons-contrib@77c1d17940

This issue was referenced by blender/blender-addons-contrib@77c1d17940e39ff9a32b4d6bd8ffbb61df3dbfbb

This issue was referenced by 77c1d17940

This issue was referenced by 77c1d17940e39ff9a32b4d6bd8ffbb61df3dbfbb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 77c1d17940.

Closed by commit 77c1d17940.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39186
No description provided.