Fix T39186: Matroska audio support (mka, mkv without video stream)

.mka files were considered image files when adding to sequencer
using drag-n-drop.